@@ -197,7 +197,7 @@ void ConfigImpl::initializeVariables()
 		{ "cupt::resolver::type", "fair" },
 		{ "cupt::resolver::score::new", "0" },
 		{ "cupt::resolver::score::removal", "-1800" },
-		{ "cupt::resolver::score::removal-of-autoinstalled", "1400" },
+		{ "cupt::resolver::score::removal-of-autoinstalled", "1500" },
 		{ "cupt::resolver::score::removal-of-essential", "-200000" },
 		{ "cupt::resolver::score::upgrade", "20" },
 		{ "cupt::resolver::score::downgrade", "-800" },
@@ -208,8 +208,8 @@ void ConfigImpl::initializeVariables()
 		{ "cupt::resolver::score::unsatisfied-try", "-10000" },
 		{ "cupt::resolver::score::unsatisfied-wish", "-500" },
 		{ "cupt::resolver::score::failed-synchronization", "-80" },
-		{ "cupt::resolver::score::version-factor", "40" },
-		{ "cupt::resolver::score::negative-version-factor", "25" },
+		{ "cupt::resolver::score::version-factor", "20" },
+		{ "cupt::resolver::score::negative-version-factor", "50" },
 		{ "cupt::worker::archives-space-limit", "0" },
 		{ "cupt::worker::defer-triggers", "auto" },
 		{ "cupt::worker::download-only", "no" },
