@@ -4,8 +4,6 @@ use Test::More tests => 9;
 use strict;
 use warnings;
 
-my $nlist = 'ne, ny, nobs';
-
 my $cupt = TestCupt::setup(
 	'dpkg_status' =>
 		entail(compose_installed_record('e', '1')) .
@@ -21,9 +19,6 @@ my $cupt = TestCupt::setup(
 				'archive' => 'x1y2',
 				'content' =>
 					entail(compose_package_record('y', '1')) .
-					entail(compose_package_record('f', '0.9') . "Depends: $nlist\n") .
-					entail(compose_package_record('f', '1.0') . "Recommends: $nlist\n") .
-					entail(compose_package_record('f', '1.1') . "Suggests: $nlist\n") .
 					entail(compose_package_record('ne', '2') . "Breaks: e\n") .
 					entail(compose_package_record('ny', '2') . "Breaks: y\n") .
 					entail(compose_package_record('nobs', '2') . "Breaks: obs\n"),
@@ -39,17 +34,15 @@ my $cupt = TestCupt::setup(
 my $cupt_options = <<'END';
 -V
 -o apt::default-release=x1y2
--o apt::install-suggests=yes
--o cupt::resolver::keep-suggests=yes
 --no-auto-remove
 -o debug::resolver=yes
 END
 $cupt_options =~ s/\n/ /g;
 
 sub test_f {
-	my ($f_version, $expected_e_version, $expected_y_version) = @_;
+	my ($importance, $expected_e_version, $expected_y_version) = @_;
 
-	my $command = "install f=$f_version";
+	my $command = "--importance=$importance install ne ny nobs";
 	subtest $command => sub {
 		my $output = get_first_offer("$cupt $cupt_options $command");
 		is(get_offered_version($output, 'e'), $expected_e_version, 'e') or diag($output);
@@ -65,9 +58,9 @@ sub test_z {
 	is(get_offered_version($output, 'z'), $expected_version, "z: $command") or diag($output);
 }
 
-test_f('0.9', get_empty_version(), get_empty_version());
-test_f('1.0', get_empty_version(), get_unchanged_version());
-test_f('1.1', get_unchanged_version(), get_unchanged_version());
+test_f(330, get_empty_version(), get_empty_version());
+test_f(230, get_empty_version(), get_unchanged_version());
+test_f(130, get_unchanged_version(), get_unchanged_version());
 
 test_z('--try install z', 3);
 test_z('--wish install z', 3);
